fix: footer align issue

--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -75,7 +75,7 @@
   }
 
   &__social {
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1280.98px) {
       margin-left: auto;
       margin-right: auto;
     }
@@ -87,7 +87,7 @@
   }
 
   &__community {
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1280.98px) {
       align-items: flex-end;
       margin-left: auto;
       h3 {
